h1. CHANGELOG

h2. 0.1.0 September 19, 2013

* support for Twitter Bootstrap 2.3