@@ -1,5 +1,3 @@
 <ul class="nav">
   <li><%= link_to 'Home', root_path %></li>
-  <li><%= link_to 'About', page_path('about') %></li>
-  <li><%= link_to 'Contact', new_contact_path %></li>
 </ul>
